# Robot-Scara

./: README.md  jugar3.py
3D-Models/: base_garra.stl  soporte_elecrtoiman.stl  soporte_universal.stl
camera/: camara_filtrado.py
interfaz_pruebas_Adri/: interfaz.py  jugar.py  jugar2.py  posiciones.txt  printer_scara.py  puntos.txt
interfaz_pruebas_Adri/arduino/: pruebas_scara.ino
raya/: raya.py
scara_description/: CMakeLists.txt  model.config  package.xml
scara_description/config/bridge/: scara_gz_bridge.yaml
scara_description/launch/: scara_description.launch.py  spawn.launch.py
scara_description/meshes/: arm_link_1.stl  base_link.stl  forearm_link_1.stl  wrist_link_1.stl  z_link_1.stl
scara_description/urdf/: scara.xacro
src/: README.md
src/BASIC/: README.md
src/BASIC/SCARA_Robot/: SCARA_BasicLoop.ino
src/BASIC/SCARA_Robot/SCARA_BasicLoop/: SCARA_BasicLoop.ino
src/UserControlled/: README.md
src/UserControlled/GUI_for_SCARA_Robot/: GUI_for_SCARA_Robot.pde
src/UserControlled/SCARA_Robot/: SCARA_Robot.ino
