<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_description</name>
  <version>0.0.0</version>
  <description>URDF/XACRO description files for robotech scara robot</description>

  <maintainer email="justodariovalverde@gmail.com">Justo Dario</maintainer>
  <author email="justodariovalverde@gmail.com">JustoDario</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
